--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div id="title">
+            <h1>Marketing</h1>
+            <h1>Creativo</h1>
+        </div>
+    </header>
 </body>
 </html>
